<resources>
    <string name="app_name">MyMegaTeam</string>
    <string name="app_subtitle">Marketing Support Tools</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_logs">Log</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="homepass_status_open">Open</string>
    <string name="homepass_complex">Complex</string>
    <string name="homepass_owner_name">Owner Name</string>
    <string name="homepass_phone">Phone</string>
    <string name="homepass_last_contact">Last contact</string>
    <string name="homepass_colon">:</string>
    <string name="homepass_last_contact_value">%s by %s</string>
    <string name="homepass_search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_bar_desc">Owner name: %s, Phone: %s</string>
    <string name="activity_date">Date</string>
    <string name="activity_contact">Contact</string>
    <string name="activity_appoinment">Appoinment</string>
    <string name="activity_transaction">Presentation</string>
    <string name="activity_owner_name">Owner Name</string>
    <string name="activity_response_code">Response Code</string>
    <string name="activity_note">Activity note…</string>
    <string name="activity_mark_open">Mark as open…</string>
    <string name="activity_phone_call">Phone call</string>
    <string name="activity_submit">Submit</string>
    <string name="log_name">Name: %s</string>
    <string name="log_note">Activity Note:</string>
    <string name="log_date">Last contact by %s at %s</string>
    <string name="error_no_homepass">Please select homepass</string>
    <string name="homepass_count">Total homepass found: %d</string>

    <plurals name="background_location_title">
        <item quantity="zero">Ixitask: No location reported</item>
        <item quantity="one">Ixitask: One location reported</item>
        <item quantity="other">Ixitask: %d locations reported</item>
    </plurals>
    <string name="format_date">dd MMM yyyy</string>
    <string name="error">An error occurred</string>
    <string name="error_location_unknown">Your location is not found. Please refresh.</string>
    <string name="error_location_disabled">Please enable GPS</string>
    <string name="error_permission">Please allow permission</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_no_response">No response from server</string>
    <string name="btn_retry">Retry</string>
    <string name="error_failed_homepass">Failed getting homepasses\n%s</string>
    <string name="error_failed_rescodes">Failed getting response codes\n%s</string>
    <string name="error_failed_update_homepass">Failed updating homepass\n%s</string>
    <string name="error_failed_logs">Failed getting logs\n%s</string>
    <string name="error_failed_login">Failed logging in\n%s</string>
    <string name="error_unselected_rescodes">Please select response code</string>
    <string name="dialog_error_title">Error: %s</string>
    <string name="dialog_error_negative">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="preference_key_location">switch_location</string>
    <string name="preference_key_log_out">log_out</string>
    <string name="prompt_log_out">Are you sure you want to log out?</string>
    <string name="homepass_empty">No homepass loaded. Please swipe down to refresh and load homepass properly.</string>
    <string name="install_empty">No installation loaded. Please swipe down to refresh and load installation properly.</string>
    <string name="logs_empty">No logs loaded. Make sure you have selected a homepass. Please swipe down to refresh and load logs properly.</string>
    <string name="summaries_empty">No summaries loaded. Please swipe down to refresh and load summaries properly.</string>
    <string name="slots_empty">No slots available. Please swipe down to refresh or select another date.</string>
    <string name="installation_cust_name">Customer Name</string>
    <string name="installation_scheduled">Scheduled</string>
    <string name="installation_status">Status</string>
    <string name="summary_subtitle">Your Marketing Summary</string>
    <string name="register_schedule">Booking Schedule</string>
    <string name="register_name">Subscriber Name</string>
    <string name="register_submit">Confirm Register</string>
    <string name="format_date_server">yyyy-MM-dd</string>
    <string name="slot_date">Date to install</string>
    <string name="back">Back</string>
    <string name="register_title">Register New Install</string>
    <string name="register_locate">Mark Install Location</string>
    <string name="register_install_fee">Install Fee</string>
    <string name="register_prorate">Prorate</string>
    <string name="register_monthly_fee">Monthly Fee</string>
    <string name="slot_title">Available Slot</string>
    <string name="install_count">Total installation: %d</string>
    <string name="homepass_title">Homes Passed</string>
    <string name="activity_title">Marketing Activity</string>
    <string name="activity_phone_number">Phone Number</string>
    <string name="activity_register_install">Register Install</string>
    <string name="log_title">Marketing Log</string>
    <string name="action_settings">Settings</string>
    <string name="nav_homepass">Homes Passed</string>
    <string name="nav_installation">Installation List</string>
    <string name="nav_summary">Marketing Summary</string>
    <string name="installation_title">Installation List</string>
    <string name="format_fee">Rp %,d</string>
    <string name="summary_title">Marketing Summary</string>
    <string name="slot_available">%s Available</string>
    <string name="slot_full">Fully Booked</string>
    <string name="mark_title">Mark Install Location</string>
    <string name="mark_capture">Take Picture</string>
    <string name="mark_locate">Take Location</string>
    <string name="slot_text">%s (id: %s)</string>
    <string name="error_failed_upload">Failed updating picture  %s</string>
    <string name="error_failed_picture">Failed receiving picture from server  %s</string>
    <string name="error_failed_install">Failed getting installations  %s</string>
    <string name="error_failed_summary">Failed getting summaries  %s</string>
    <string name="error_failed_homesummary">Failed getting summary responses %s</string>
    <string name="error_failed_slot">Failed getting slots %s</string>
    <string name="error_failed_register">Failed to submit installation data %s</string>
    <string name="error_failed_product">Failed getting products  %s</string>
    <string name="install_detail_title">Register Detail</string>
    <string name="install_detail_owner">%s\n%s\n%s</string>
    <string name="install_detail_product">Product</string>
    <string name="install_detail_loc">Install Location</string>
    <string name="install_detail_latlng">Latitude: %s\nLongitude: %s</string>
    <string name="install_detail_photos">Location Photos</string>
    <string name="failed_install_detail">Failed getting installation data %s</string>
    <string name="empty_location_tracking">Harap mengaktifkan fitur location tracking di menu settings pada aplikasi ini dan menyalakan GPS pada device Anda terlebih dahulu.\nSetelah itu, lakukan refresh dengan gestur scroll ke bawah untuk memuat data.</string>

</resources>
