<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:orientation="horizontal">

    <com.github.vipulasri.timelineview.TimelineView
        android:id="@+id/timeline"
        app:marker="@drawable/logs_marker"
        app:markerSize="18dp"
        app:line="@color/colorPrimaryDark"
        app:lineSize="1dp"
        app:markerInCenter="false"
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/text_name"
            android:text="@string/log_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/log_note"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_note"
            tools:text="siap bertransaksi mantap"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_date"
            android:text="@string/log_date"
            android:textStyle="italic"
            android:fontFamily="@font/ubuntu_italic"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
