<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/homepass_vertical_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_street"
        tools:text="Jl. Sukajadi No.1"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/homepass_horizontal_margin"
        android:layout_marginEnd="@dimen/homepass_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/homepass_horizontal_margin"
        android:layout_marginEnd="@dimen/homepass_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/homepass_complex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/installation_cust_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/installation_scheduled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/installation_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/homepass_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/homepass_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/homepass_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/homepass_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_complex"
                tools:text="Jalan Umum H2N1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_name"
                tools:text="Bpk. Wirawan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_scheduled"
                tools:text="12 Dec 2017 Slot Pagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_status"
                tools:text="Completed"
                android:background="@drawable/textview_install_status"
                android:padding="@dimen/homepass_vertical_padding"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:background="@color/lightGrey2"
        android:layout_marginTop="@dimen/homepass_vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>
