<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ActivityFragment">

    <RelativeLayout
        android:id="@+id/layout_action_bar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btn_menu_back"
            app:srcCompat="@drawable/menu_back"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/install_detail_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/btn_settings"
            app:srcCompat="@drawable/menu_settings"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:padding="5dp"
        android:layout_below="@id/layout_action_bar"
        android:layout_above="@id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <TextView
                    android:id="@+id/text_date"
                    android:drawableStart="@drawable/activity_date"
                    android:drawablePadding="8dp"
                    tools:text="28 Aug 2019 Slot 1 Pagi 19:00 - 20:00"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_owner"
                    android:drawableStart="@drawable/activity_owner"
                    android:drawablePadding="8dp"
                    tools:text="@string/install_detail_owner"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/install_detail_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/lightGrey1"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ListView
                        android:id="@+id/list_products"
                        tools:listitem="@android:layout/simple_list_item_1"
                        tools:itemCount="3"
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_toStartOf="@id/layout_prorate"
                            android:layout_alignParentStart="true"
                            android:gravity="center_horizontal"
                            android:layout_marginEnd="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/register_monthly_fee"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                tools:text="250.000"
                                android:id="@+id/text_fee_monthly"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_prorate"
                            android:orientation="vertical"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/register_prorate"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/text_fee_prorate"
                                tools:text="250.000"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_toEndOf="@id/layout_prorate"
                            android:layout_alignParentEnd="true"
                            android:gravity="center_horizontal"
                            android:layout_marginStart="16dp"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/register_install_fee"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/text_fee_install"
                                tools:text="250.000"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:text="@string/install_detail_loc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/text_location"
                    android:padding="5dp"
                    android:text="@string/install_detail_latlng"
                    android:background="@color/lightGrey1"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/install_detail_photos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <FrameLayout
                    android:background="@color/lightGrey1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text_empty"
                        android:text="@string/homepass_empty"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:visibility="invisible"
                        android:layout_margin="16dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_photos"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2"
                        tools:listitem="@layout/item_install_pics"
                        tools:itemCount="6"
                        tools:context=".fragments.InstallDetailFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </FrameLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_back"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rounded_signin"
            android:text="@string/back" />
    </LinearLayout>

</RelativeLayout>